# NetworkManager

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  NEWS  NetworkManager.h  README  autogen.sh  config.h.meson  configure.ac  configure.in  coverity.html  kdebase-workspace-nm-compat.patch  libnm-test.py  meson.build  meson_options.txt  nm.py  nm1.py  valgrind.suppressions
.copr/: Makefile
callouts/: Makefile.am  Makemodule.am  mpp.py  nm-avahi-autoipd.action  nm-avahi-autoipd.conf  nm-dhcp-client.action  nm-dispatcher-utils.c  nm-dispatcher-utils.h  nm-dispatcher.c
data/: Makemodule.am  NetworkManager.service.in  meson.build  org.freedesktop.NetworkManager.policy.in.in
dhcpcd/: buildmsg.c
dialup-services/: .cvsignore  Makefile  Makefile.am  nm-btgprs-service.name.in  nm-modem-service.name.in  nm-pppoe-service.name.in
dispatcher/: nm-dispatcher-utils.c  nm-dispatcher-utils.h  nm-dispatcher.c  nm-dispatcher.xml
dispatcher-daemon/: NetworkManagerDispatcher.c
docs/: ovs.txt
examples/: Makemodule.am
gnome/: Makefile.am
gnome/dialup-auth/common/: Makefile.am  gnome-two-password-dialog.c  gnome-two-password-dialog.h
gnome/dialup-auth/ppp/: .cvsignore  Makefile.am  main.c
gnome/dialup-auth/pppoe/: .cvsignore  Makefile.am  main.c  nm-pppoe-tonline-dialog.glade
gnome/dialup-properties/: .cvsignore  Makefile.am  clipboard.c  clipboard.h  nm-dialup-properties.c  nm-dialup-properties.glade  nm-dialup-ui-interface.h
gnome/dialup-properties/btgprs/: Makefile.am  nm-btgprs-dialog.glade  nm-btgprs-properties.c
gnome/dialup-properties/modem/: Makefile.am  nm-modem-dialog.glade  nm-modem-properties.c
gnome/dialup-properties/pppoe/: Makefile.am  nm-pppoe-dialog.glade  nm-pppoe-properties.c
include/: NetworkManager.h  NetworkManagerDialup.h  nm-dbus-glib-types.h  nm-macros-internal.h  nm-test-utils.h  nm-utils-internal.h
info-daemon/: Makefile.am  NetworkManagerInfo.c  NetworkManagerInfo.h  NetworkManagerInfoDbus.c  NetworkManagerInfoDbus.h  NetworkManagerInfoPassphraseDialog.c
introspection/: Makefile.am  Makemodule.am  all.xml.in  generic-types.xml  meson.build  nm-device-gsm.xml  nm-device-wifi.xml  nm-device.xml  nm-dns-manager.xml  nm-manager.xml  nm-secret-agent-portal.xml  nm-secret-agent.xml  nm-vpn-connection.xml  nm-vpn-plugin.xml  org.freedesktop.NetworkManager.AccessPoint.xml  org.freedesktop.NetworkManager.Device.Lowpan.xml  org.freedesktop.NetworkManager.Device.Openvswitch.xml  org.freedesktop.NetworkManager.Device.Tun.xml  org.freedesktop.NetworkManager.Device.Wireguard.xml  org.freedesktop.NetworkManager.Device.Wpan.xml  org.freedesktop.NetworkManager.Device.xml  org.freedesktop.NetworkManager.xml
libnm/: Makefile.am  (+64 more)
libnm-core/: Makefile.am  Makefile.libnm-core  Makemodule.am  crypto.c  nm-connection.c  nm-connection.h  nm-core-internal.h  nm-core-types.h  nm-crypto-gnutls.c  nm-crypto-nss.c  nm-crypto.c  nm-dbus-interface.h  nm-errors.c  nm-jansson.c  nm-keyfile-internal.h  nm-keyfile-reader.c  nm-keyfile-utils.c  nm-keyfile-utils.h  nm-keyfile-writer.c  nm-keyfile.c  nm-prop-meta.c  nm-prop-meta.h  nm-property-compare.c  nm-setting-6lowpan.c  nm-setting-6lowpan.h  nm-setting-8021x.c  nm-setting-8021x.h  nm-setting-bond.c  nm-setting-bridge-port.c  nm-setting-bridge.c  nm-setting-connection.c  nm-setting-connection.h  nm-setting-contrail-vrouter.c  nm-setting-contrail-vrouter.h  nm-setting-ethtool.c  nm-setting-ethtool.h  nm-setting-gsm.c  nm-setting-infiniband.c  nm-setting-ip-config.c  nm-setting-ip6-config.c  (+39 more)
libnm-glib/: Makefile.am  Makemodule.am  nm-access-point.c  nm-client.c  nm-device-wifi.c  nm-device.c  nm-dhcp4-config.c  nm-dhcp6-config.c  nm-dns-manager.c  nm-dns-manager.h  nm-ip4-config.c  nm-network-monitor.c  nm-network-monitor.h  nm-object-private.h  nm-object.c  nm-remote-settings.c  nm-secret-agent.c  nm-secret-agent.h  nm-vpn-plugin.c
libnm-gpl/: libnm-gpl.pc.in  libnm-gpl.ver
libnm-util/: Makefile.am  Makemodule.am  NetworkManagerVPN.h  libnm-util.ver  nm-setting-8021x.c  nm-setting-8021x.h  nm-setting-bond.c  nm-setting-bond.h  nm-setting-connection.c  nm-setting-connection.h  nm-setting-ip4-config.c  nm-setting-ip6-config.c  nm-setting-property-meta.c  nm-setting-property-meta.h  nm-setting-wireless-security.c  nm-setting-wireless.c  nm-setting-wireless.h  nm-setting.c  nm-setting.h  nm-string-index.c  nm-string-index.h  nm-utils.c  nm-utils.h  nm-version.h.in
src/compat/: Makefile.am  nm-compat-act-request.c  nm-compat-act-request.h  nm-compat-active-connection.c  nm-compat-active-connection.h  nm-compat-active-connection.xml  nm-compat-device-cdma.c  nm-compat-device-cdma.h  nm-compat-device-cdma.xml  nm-compat-device-ethernet.c  nm-compat-device-ethernet.h  nm-compat-device-ethernet.xml  nm-compat-device-gsm.c  nm-compat-device-gsm.h  nm-compat-device-gsm.xml  nm-compat-device-wifi.c  nm-compat-device-wifi.h  nm-compat-device-wifi.xml  nm-compat-device.c  nm-compat-device.h  nm-compat-device.xml  nm-compat-manager.c  nm-compat-manager.h  nm-compat-manager.xml  nm-compat-vpn-connection.c  nm-compat-vpn-connection.h  nm-compat-vpn-connection.xml
src/devices/tests/: Makefile.am  test-device.c  test-lldp.c
src/dialup/manager/: Makefile.am  nm-dbus-dialup.c  nm-dbus-dialup.h  nm-dialup-act-request.c  nm-dialup-act-request.h  nm-dialup-connection.c  nm-dialup-connection.h  nm-dialup-manager.c  nm-dialup-manager.h  nm-dialup-service.c  nm-dialup-service.h
src/dialup/ppp/: .cvsignore  Makefile.am  nm-ppp-service.c  nm-ppp-service.h  nm-ppp.conf  nm-pppd-plugin.c
src/modem-manager/: Makefile.am  nm-modem-device.c  nm-modem-device.h  nm-modem-gsm.c  nm-modem-manager.c  nm-modem-manager.h  nm-modem-types.h
src/ppp-manager/: .cvsignore  Makefile.am  nm-ppp-manager.c  nm-ppp-service.c  nm-ppp-service.h  nm-ppp.h  nm-pppd-plugin.c  nm-pppd-plugin.h
src/settings/plugins/ibft/: Makefile.am  errors.c  errors.h  nm-ibft-connection.c  nm-ibft-connection.h  nms-ibft-reader.c  plugin.c  plugin.h  reader.c  reader.h
src/settings/plugins/ibft/tests/: Makefile.am  iscsiadm-test-bad-entry  iscsiadm-test-vlan  test-ibft.c
(+605 files in other folders)
