nmbtgprsservicedir = $(sysconfdir)/NetworkManager/dialup
nmbtgprsservice_DATA = nm-btgprs-service.name

nmmodemservicedir = $(sysconfdir)/NetworkManager/dialup
nmmodemservice_DATA = nm-modem-service.name

nmpppoeservicedir = $(sysconfdir)/NetworkManager/dialup
nmpppoeservice_DATA = nm-pppoe-service.name

EXTRA_DIST = $(nmbtgprsservice_DATA) \
             $(nmmodemservice_DATA)  \
             $(nmpppoeservice_DATA)

CLEANFILES = *~
